Bug fixes:
* Fix a potential memory corruption of the destination buffer address
  when receiving expected messages.

Other improvements from previous release:
* Update the FAQ and install it in the documentation install directory.
* Cleanup the management of KCC and KARCH for configuring the kernel build.
* Add open-mx.spec to ease RPM package build.

Caveats:
* No background progression or retransmission is done if the application
  does not invoke an Open-MX routine explicitly.

Open-MX 1.2.0 (December 15th 2009, svn r2835)
=============================================

Bug fixes:
* Fix the build of recent Myricom FMS.
* Fix build with final Linux kernel 2.6.32.

Open-MX 1.1.903 aka 1.2-rc3 (December 1st 2009, svn r2826)
==========================================================

Bug fixes:
* Fix installation when using DESTDIR.
* Use udev last_rule option to make sure that no default rule will
  ever override Open-MX rules.

Other improvements from previous release:
* Miscellaneous documentation updates.
* Cleanup the verbose message prefix.
* Drop features that were deprecated since 1.1:
  + make installonly (use make install instead).
  + IFACES in the open-mx.conf file (use OMX_IFACES instead).

Open-MX 1.1.902 aka 1.2-rc2 (October 23rd 2009, svn r2802)
==========================================================

Bug fixes:
* Redirect omxoed errors to /var/log/omxoed.log so that we can
  avoid hangs when running omx_init through ssh.
* Fix build with the intel compiler icc.
* Fix build with against 2.6.32 kernels.
* Fix the management of the medium message fragment size.
* Fix an invalid assertion when inserting an early medium fragment
  at the beginning of the partner early queue.
* Fix some possible aliasing problems.

Other improvements from previous release:
* Add --with-shared-ring-entries to reduce vmalloc memory requirements.
* Misc documentation updates.

Open-MX 1.1.901 aka 1.2-rc1 (September 23rd 2009, svn r2757)